--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,5 @@
 ul{ list-style:none;}
 .container{ width:750px; margin:0 auto;}
 section{ width:100%; float:left;}
-.slider_js{ overflow:hidden; width:100%;}
-.slider_js li{ float:left;}
+#slide{ overflow:hidden; width:100%;}
+#slide li{ float:left;}
